# pywui

./: README.md  pyproject.toml
example/: cmd  main.py  main.spec  pywui.conf.json  pywui.json
example/app/src/: App.tsx  api.ts
pywui/: __init__.py  api.py  app.py  decorator.py  di.py  dispatcher.py  window.py
