[tool.poetry]
name = "pywui"
version = "0.1.4"
description = "Pywui is a Python package wrapper for pywebview to make easy the communication between python and JS and async support."
authors = ["Tsiresy Milà <tsiresymila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ujson = "^5.10.0"


[tool.poetry.group.dev.dependencies]
pywebview = "^5.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
